<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/parentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_fields"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <ProgressBar
                        android:id="@+id/playerHp"
                        style="@android:style/Widget.Material.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:indeterminate="false"
                        android:progressTint="@color/design_default_color_error" />

                    <TextView
                        android:id="@+id/playerInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/playerHp"
                        android:textAlignment="center" />

                    <ImageView
                        android:id="@+id/playerAnim"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:src="@drawable/idle1" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <ProgressBar
                        android:id="@+id/enemyHp"
                        style="@android:style/Widget.Material.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:indeterminate="false"
                        android:progressTint="@color/design_default_color_error" />

                    <TextView
                        android:id="@+id/enemyInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/enemyHp"
                        android:textAlignment="center" />

                    <ImageView
                        android:id="@+id/enemyAnim"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:src="@drawable/idle1" />

                </RelativeLayout>
            </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/meleeWeaponBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/no_melee_weapon_equipped"
                    android:textAllCaps="false" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/rangedWeaponBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/no_special_weapon_equipped"
                    android:textAllCaps="false">

                </androidx.appcompat.widget.AppCompatButton>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bagBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:text="@string/bag"
                    android:textAllCaps="false" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/fleeBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/flee"
                    android:textAlignment="center"
                    android:textAllCaps="false" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>